# drudge

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  copilot-setup-steps.yml  windows.yml
docs/: RELEASE_PROCESS.md  intro.rst  tutorial.rst
drudge/: __init__.py  canonpy.cpp  drudge.py  utils.py
tests/: free_algebra_test.py  utils_test.py
