[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.minimum-version = "3.15"  # Minimum version of CMake
cmake.verbose = true  # Verbose build for debugging
# Don't create a separate subdirectory - install alongside Python source files
wheel.packages = ["drudge"]
sdist.include = ["drudge/templates/*", "drudge/*.h", "deps/libcanon/include/**/*.h"]

[project]
name = "drudge"
version = "0.12.0"
description = "A symbolic algebra system for tensorial and noncommutative algebras"
requires-python = ">=3.12"
dependencies = [
  "sympy>=1.14",
  "jinja2",
  "pyspark>=3.5,<3.6",
  "dummyrdd @ git+https://github.com/DrudgeCAS/DummyRDD.git@master",
  "ipython>=9.0",
  "ipykernel>=7.1.0"
]
classifiers = [
  'Development Status :: 4 - Beta',
  'Intended Audience :: Developers',
  'Intended Audience :: Science/Research',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: Implementation :: CPython',
  'Topic :: Scientific/Engineering :: Mathematics'
]
readme = "README.md"
license = {text = "MIT"}
authors = [
  { name = "Jinmo Zhao" },
  { name = "Gustavo E. Scuseria" }
]
maintainers = [
  { name = "Guo P. Chen" },
  { name = "Gaurav Harsha" },
  { name = "Matthew Wholey" }
]

[project.optional-dependencies]
docs = ["sphinx"]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/DrudgeCAS/drudge"

[project.scripts]
drudge = "drudge.drs:main"
